# kendama-python

./: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python.yml
.openapi-generator/: FILES
docs/: Announcement.md  ResponseBody.md  V1Api.md
kendama/: __init__.py  api_client.py  configuration.py  rest.py
kendama/api/: __init__.py  v1_api.py
kendama/models/: __init__.py  announcement.py  response_body.py
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi_client/api/: v1_api.py
openapi_client/models/: __init__.py  response_body.py
test/: test_announcement.py  test_response_body.py  test_v1_api.py
