[tool.poetry]
name = "kendama"
version = "0.1.3"
description = "国税庁API"
authors = ["uichi <37263474+uichi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uichi/kendama-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "国税庁API"]
include = ["kendama/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
